--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -27,6 +27,18 @@
           | >facebookには一切投稿されません
         = link_to "メールアドレスで登録", new_user_registration_path, class: 'registration_button'
 .continer
+  .swiper-container
+    .swiper-wrapper
+      .swiper-slide
+        コンテンツ1
+      .swiper-slide
+        コンテンツ2
+      .swiper-slide
+        コンテンツ3
+    .swiper-pagination
+    .swiper-button-prev
+    .swiper-button-next
+    .swiper-scrollbar
   .col-md-12
     /*ここ画像作成中*/
     h2 簡単使い方説明 - マッチング編
@@ -38,5 +50,6 @@
   .col-md-12
     = image_tag 'top_prem_explane_title_pc'
     = image_tag 'top_price_pc'
+
 
 
