facebookログイン時にuserstatusも作成

--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -13,12 +13,12 @@
         p
           | 無料登録完了後、コミュニティに参加し気になる人にいいね！を送りましょう♪
       .gender-badges
-        = image_tag 'sex_badge_l'
-        = image_tag 'sex_badge_g'
-        = image_tag 'sex_badge_b'
-        = image_tag 'sex_badge_t'
-        = image_tag 'sex_badge_s'
-        = image_tag 'sex_badge_o'
+        = image_tag 'sex_badge_1'
+        = image_tag 'sex_badge_2'
+        = image_tag 'sex_badge_3'
+        = image_tag 'sex_badge_4'
+        = image_tag 'sex_badge_5'
+        = image_tag 'sex_badge_6'
       .registration-btns
         = link_to user_facebook_omniauth_authorize_path, class: 'facebook_button' do
           i.fa.fa-facebook
