--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -28,9 +28,17 @@
         = link_to "メールアドレスで登録", new_user_registration_path, class: 'registration_button'
 .continer
   .col-md-12
+    .swiper-container
+      h2 簡単使い方説明 - マッチング編
+      .swiper-wrapper
+        .swiper-slide = image_tag 'top_howto_match_pc'
+        .swiper-slide = image_tag 'top_howto_match_pc'
+        .swiper-slide = image_tag 'top_howto_match_pc'
+      .swiper-pagination
+      .swiper-button-prev
+      .swiper-button-next
+      .swiper-scrollbar
     /*ここ画像作成中*/
-    h2 簡単使い方説明 - マッチング編
-    = image_tag 'top_howto_match_pc'
     br
     br
     br
@@ -38,5 +46,6 @@
   .col-md-12
     = image_tag 'top_prem_explane_title_pc'
     = image_tag 'top_price_pc'
+
 
 
