--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -1,3 +1,12 @@
+/ #popup.white-popup
+/   = link_to '画像', 'http://mama-informationa.up.seesaa.net/image/dare'
+= link_to 'darenogare', 'http://mama-informationa.up.seesaa.net/image/dare', class: 'test-popup-link'
+
+.parent-container
+  = link_to 'darenogare', 'http://mama-informationa.up.seesaa.net/image/dare'
+  = link_to 'darenogare', 'http://mama-informationa.up.seesaa.net/image/dare'
+  = link_to 'darenogare', 'http://mama-informationa.up.seesaa.net/image/dare'
+
 .panelList_section
   .panelList_search_button.text-right
     button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
