--- a/app/views/layouts/guest.html.slim
+++ b/app/views/layouts/guest.html.slim
@@ -8,7 +8,7 @@ html
     = stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/cupertino/jquery-ui.min.css"
     = stylesheet_link_tag 'https://www.w3schools.com/w3css/4/w3.css'
     = stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    / = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = favicon_link_tag '/assets/favicon-32x32.png'
     = csrf_meta_tags
   body
