--- a/app/views/guest/communities/detail.html.slim
+++ b/app/views/guest/communities/detail.html.slim
@@ -31,14 +31,13 @@
 
         .community_detail_list
           h5 = '参加者一覧'
-          - @users.limit(5).each do |user|
+          - @community_members.limit(5).each do |community_member|
             .community_detail_content
-              = link_to search_path(user) do
+              = link_to search_path(community_member) do
                 .community_image
-                  = image_tag user.user_profile.image1, class: 'img-radius'
+                  = image_tag community_member.user_profile.image1, class: 'img-radius'
                 .community_body
-                  .community_name = 'コミュニティ名'
-                  .community_num = '( 123 名)'
+                  .community_name = community_member.name
                 .community_footer
 
     .community_futter
