--- a/app/views/guest/communities/_form.html.slim
+++ b/app/views/guest/communities/_form.html.slim
@@ -1,25 +1,28 @@
-#sampleModal.modal.fade[tabindex="-1"]
-      .modal-dialog
-        .modal-margin
-          .modal-content
-            .modal-header
-              button.close[type="button" data-dismiss="modal"]
-                span
-                  | ×
-              / h3.modal-title
-              /   | 検索
-            .modal-body
-              = form_for(@community) do |f|
-                .row
-                  .col-md-12.text-center
-                    .form-group
-                      = f.label :コミュニティ名
-                      = f.text_field :name, class: "form-control",  placeholder: "コミュニティ名"
-                      / = f.label :category
-                      / = f.select :category, class: "form-control",  placeholder: "コミュニティ名"
-                      = f.label :introduce
-                      = f.text_area :introduce, class: "form-control",  placeholder: "コミュニティ説明文"
+.panelList_search_button.text-right
+  button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
+    |  コミュニティ作成
+  #sampleModal.modal.fade[tabindex="-1"]
+    .modal-dialog
+      .modal-margin
+        .modal-content
+          .modal-header
+            button.close[type="button" data-dismiss="modal"]
+              span
+                | ×
+            / h3.modal-title
+            /   | 検索
+          .modal-body
+            = form_for(@community) do |f|
+              .row
+                .col-md-12.text-center
+                  .form-group
+                    = f.label :コミュニティ名
+                    = f.text_field :name, class: "form-control",  placeholder: "コミュニティ名"
+                    / = f.label :category
+                    / = f.select :category, class: "form-control",  placeholder: "コミュニティ名"
+                    = f.label :introduce
+                    = f.text_area :introduce, class: "form-control",  placeholder: "コミュニティ説明文"
 
-                      = f.label :image
-                      = f.file_field :image, class: "form-control image-field"
-                    = f.submit '保存', class: "btn btn-primary", data: { confirm: 'この内容で保存してもいいですか', disable_with: '処理中...' }
+                    = f.label :image
+                    = f.file_field :image, class: "form-control image-field"
+                  = f.submit '保存', class: "btn btn-primary", data: { confirm: 'この内容で保存してもいいですか', disable_with: '処理中...' }
