--- a/app/assets/stylesheets/guest/layers/_like.sass
+++ b/app/assets/stylesheets/guest/layers/_like.sass
@@ -17,7 +17,8 @@
 .panel
   &_container
     display: block
-    padding: 20px
+    padding: 10px 20px
+    height: 166px
     +responsive(pc)
       border: 2px solid $red
       border-radius: 10px
@@ -76,7 +77,7 @@
     width: 150px
     text-align: center
     position: absolute
-    top: 80px
+    top: 60px
     right: 30px
     background: $red
     color: $white
