--- a/app/views/guest/users/_sidebar.html.slim
+++ b/app/views/guest/users/_sidebar.html.slim
@@ -20,7 +20,7 @@
     .sidebar_sub_image_list
       .sidebar_sub_title
         / TODO namba バッジ画像着たら修正
-        = image_tag 'sex_badge_l', class: 'img-label'
+        = image_tag 'sex_badge_1', class: 'img-label'
         h5 サブ写真追加
       .sidebar_sub_images
         .sidebar_sub_image = link_to image_tag(@user.user_profile.image1, class: "img-radius", size: '80'), "#ImageModal1", data: {toggle: 'modal'}
