--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -8,24 +8,25 @@
           .modal-content
             .modal-body
               = render 'search'
-  .card_list
-    - @users.each do |user|
-      .card_content
-        .card_image
+  - cache @users do
+    .card_list
+      - @users.each do |user|
+        .card_content
+          .card_image
 
-          / 画像サイズきめた後、size:100%に変更。
-          = link_to image_tag(user.user_profile.image1, width: '100%', height: '240px', class: 'img-radius'), search_path(user)
+            / 画像サイズきめた後、size:100%に変更。
+            = link_to image_tag(user.user_profile.image1, width: '100%', height: '240px', class: 'img-radius'), search_path(user)
 
-          .card_info
-            .card_age = "#{user.user_profile.age}歳"
-            .card_address = user.user_profile.prefecture.name
-            .card_sex = image_tag "sex_badge_#{user.user_profile.sex}"
-        .card_body
-          .card_name = user.name
-        .card_footer
-          - if good(user)
-            .card_liked_button イイね済
-          - else
-            .card_like_button = link_to 'イイね', likes_path(id: current_user, target: user), method: :post
+            .card_info
+              .card_age = "#{user.user_profile.age}歳"
+              .card_address = user.user_profile.prefecture.name
+              .card_sex = image_tag "sex_badge_#{user.user_profile.sex}"
+          .card_body
+            .card_name = user.name
+          .card_footer
+            - if good(user)
+              .card_liked_button イイね済
+            - else
+              .card_like_button = link_to 'イイね', likes_path(id: current_user, target: user), method: :post
 
-  = paginate @users
+    = paginate @users
