一旦コミット

--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -82,12 +82,8 @@
   +fontsize(32)
   li
     padding: 0px 0px 0px 250px
-.swiper-container
-  margin-left: 0
-
-.swiper-container, .swiper-slide
-  width: 90%
-  margin-left: 0
-  // height: 200px
+.top-container
+  width: 1000px
+  margin-left: 35px
 
 
