--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -26,7 +26,7 @@
         small
           | >facebookには一切投稿されません
         = link_to "メールアドレスで登録", new_user_registration_path, class: 'registration_button'
-.continer
+.top-container
   .swiper-container
     h2 簡単使い方説明 - マッチング編
     .swiper-wrapper
