--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -39,6 +39,9 @@
     border-radius: 10px
     +responsive(smartphone)
       display: none
+  &-box_sp
+    +responsive(pc)
+      display: none
   &-title
     color: $white
   &-btns
