--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -26,7 +26,7 @@
       small
         | >facebookには一切投稿されません
       = link_to "メールアドレスで登録", new_user_registration_path, class: 'registration_button'
-  .row
+  .row.registration-box_sp
     .col-xs-10.col-xs-offset-1
       .registration-title
         p
