本番_画像表示

--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -44,7 +44,7 @@
   .swiper-container
     h2 簡単使い方説明 - マッチング編
     .swiper-wrapper
-      .swiper-slide = image_tag 'top_howto_match_pc'
+      .swiper-slide = image_tag 'top_howto_match_pc.png'
       .swiper-slide = image_tag 'top_howto_match_pc'
       .swiper-slide = image_tag 'top_howto_match_pc'
     .swiper-pagination
