さがす画面にモーダル追加

--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -30,6 +30,7 @@
   margin-bottom: 50px
 .registration
   &-box
+    display: none
     position: absolute
     top: 220px
     left: 25%
@@ -37,6 +38,7 @@
     height: 350px
     background: rgba( $red, 0.5 )
     border-radius: 10px
+    z-index: 9999
     +responsive(smartphone)
       display: none
   &-box_sp
