--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -7,25 +7,8 @@
     p.layer_board_btn
       = link_to 'もう一度開く', '#'
 
-.registration-box.text-center
-  .registration-title
-    h2 無料登録
-    p
-      | 無料登録完了後、コミュニティに参加し気になる人にいいね！を送りましょう♪
-  .gender-badges
-    = image_tag 'sex_badge_1.png'
-    = image_tag 'sex_badge_2.png'
-    = image_tag 'sex_badge_3.png'
-    = image_tag 'sex_badge_4.png'
-    = image_tag 'sex_badge_5.png'
-    = image_tag 'sex_badge_6.png'
-  .registration-btns
-    = link_to user_facebook_omniauth_authorize_path, class: 'facebook_button' do
-      i.fa.fa-facebook
-      | Facebookログイン
-    small
-      | >facebookには一切投稿されません
-    = link_to "メールアドレスで登録", new_user_registration_path, class: 'registration_button'
+.registration-tutorial-box.text-center
+    = image_tag 'tutorial_1.png'
 
 
 
