チュートリアル作成

--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -13,6 +13,7 @@ body
   font-family: $font-sans-serif
   background: darken($light-gray, 4%)
   word-break : break-all
+  height: 100%
 // 標準のリンクタグ
 a
   color: $link-color
