--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -44,9 +44,20 @@
       display: none
   &-tutorial-box
     @extend .registration-box
+    position: fixed
     display: none
+    left: 30%
     background: none
     z-index: 9999
+    .tutorial_img
+      display: none
+  &-tutorial-bg
+    position: absolute
+    display: none
+    background: rgba( $black, 0.5 )
+    width: 100%
+    height: 2300px
+    z-index: 1000
   &-title
     color: $white
   &-btns
