--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,7 @@ html
   head
     title
       | Lemon
+    meta content="width=device-width,initial-scale=1" name="viewport"
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     link[rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"]
     = stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'
