チュートリアル遷移追加

--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -51,6 +51,8 @@
     z-index: 9999
     .tutorial_img
       display: none
+    .tutorial_active
+      display: block
   &-tutorial-bg
     position: absolute
     display: none
@@ -142,5 +144,4 @@
       margin-right: 0
   .price_image_one
     padding-top: 26px
-
 
