ロゴ画像変更&css修正

--- a/app/assets/stylesheets/guest/modules/_tab.sass
+++ b/app/assets/stylesheets/guest/modules/_tab.sass
@@ -1,6 +1,6 @@
 .tab
   &_header
-    padding: 20px 0
+    padding-bottom: 20px
     display: flex
     justify-content: space-between
     +responsive(smartphone)
