--- a/app/views/guest/_header.html.slim
+++ b/app/views/guest/_header.html.slim
@@ -3,12 +3,12 @@
     .navbar-body
       .navbar_site_title
         = link_to root_path
-          = image_tag 'lemon_logo', :size => "30"
+          = image_tag 'rectangle_logo.png'
           small = '性別にとらわれない健全な交流の場'
       .navbar_logout_button
         #menu_sp
           button
-            = image_tag 'lemon_logo', :size => "30"
+            = image_tag 'square_logo.png', :size => "30"
   / スマホ
   #menu_sp
     .navbar_sp
