--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -1,6 +1,6 @@
 .jumbotron
   .login-section
-    = image_tag 'lemon_logo', :size => "200x100", class:'logo'
+    = image_tag 'rectangle_logo.png', width: '95%', class:'logo'
     = link_to user_facebook_omniauth_authorize_path, class: 'login_button' do
       i.fa.fa-facebook
       | Facebookログイン
