--- a/app/views/layouts/guest.html.slim
+++ b/app/views/layouts/guest.html.slim
@@ -27,7 +27,7 @@ html
       // content
       #layout_content
         #layout_banner
-          = image_tag 'premire_baner', width: '100%', class: 'baner-image'
+          = image_tag 'banner.png', width: '100%', class: 'baner-image'
         = yield
 
     // footer
