--- a/app/views/devise/_header.html.slim
+++ b/app/views/devise/_header.html.slim
@@ -3,11 +3,11 @@
     .navbar-body
       .navbar_site_title
         = link_to root_path
-          = image_tag 'lemon_logo', :size => "30"
+          = image_tag 'rectangle_logo.png', :size => "30"
           small = '性別にとらわれない健全な交流の場'
       .navbar_logout_button
         #menu_sp
           button
-            = image_tag 'lemon_logo', :size => "30"
+            = image_tag 'square_logo.png', :size => "30"
 
 
