--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -32,7 +32,7 @@
           .card_image
 
             / 画像サイズきめた後、size:100%に変更。
-            = link_to image_tag(user.user_profile.image1.thumb, class: 'img-radius'), search_path(user)
+            = link_to image_tag(user.user_profile.image1.cover, class: 'img-radius'), search_path(user)
 
             .card_info
               .card_age = "#{user.user_profile.age}歳"
