--- a/app/views/guest/users/_profile_modal.html.slim
+++ b/app/views/guest/users/_profile_modal.html.slim
@@ -39,18 +39,13 @@
                   label
                     | タチ・ネコ
                   = f.select :play_style, UserProfile::PLAY_STYLE, {prompt:"選択してください"}, { class: 'form-control'}
+
             .row
               .col-md-12.select
                 .form-group
-                  / label
-                  /   | 生年月日
-                  / == sprintf( f.date_select(
-                  / - birthday:,
-                  / - use_month_numbers: true,
-                  / - start_year: 1930,
-                  / - end_year:   (Time.now.year - 18),
-                  / - default:    Date.new(1980, 1, 1),
-                  / - date_separator: '%s', datetime_separator: '%s' ), '年', '月') + '日'
+                  label
+                    | 生年月日
+                  == sprintf( f.date_select(:birthday, use_month_numbers: true, start_year: 1930, end_year:   (Time.now.year - 18), default:    Date.new(1980, 1, 1), date_separator: '%s', datetime_separator: '%s' ), '年', '月') + '日'
             .row
               .col-md-12.select
                 .form-group
