--- a/app/views/layouts/guest.html.slim
+++ b/app/views/layouts/guest.html.slim
@@ -43,6 +43,7 @@ html
 
 
 
+  = include_gon
   = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'
   = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.0/sweetalert.min.js'
   = javascript_include_tag 'guest'
